Add Dog Year Calculator and update settings for Python analysis

--- a/002/Class002_CalebThomas.ipynb
+++ b/002/Class002_CalebThomas.ipynb
@@ -62,17 +62,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e2cf9f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = '''During this assignment, I found that there was some topics that i didn't remember from when i learned python in highschool. For example, i was reminded about dictionaries as well list and tuples which i did not use much of when first learning and it was a nice refresher. I did not find much difficaultly in the assignment and found that the assignment was very easy to complete. I did not have to do any research for this assignment other then what was provided in the video as i was able to complete it with the knowledge that i already had. writing the 25 questions however was a bit of a challenge as i had to think of 25 questions that i could ask and then write them out i sadly wasn't able to think on 25 questions so i only wrote 19. I did not have any issues with the assignment and found it to be very easy to complete. futhermore before the assignment was changed from the orignial i has already complated the code which is attached below.'''\n",
-    "print(s.count(' '))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a8b96f06",
    "metadata": {},
@@ -84,6 +73,135 @@
     "        </td>\n",
     "    </tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8ed3e1ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your age in dog years is:  133\n",
+      "Closing program.....\n"
+     ]
+    }
+   ],
+   "source": [
+    "## DogYearCalculator.py \n",
+    "\"\"\"\n",
+    "Caleb Thomas\n",
+    "01/29/25\n",
+    "Desciption: a program that takes users age and outputs it in dog years\n",
+    "\n",
+    "startCommand: py DogYearCalculator.py\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "def calculate_Age(age):\n",
+    "    \"\"\"\n",
+    "    Calculates age in dog years \n",
+    "    @param(Number): age\n",
+    "    @returns: Number\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return age*7\n",
+    "\n",
+    "\n",
+    "def Init():\n",
+    "\n",
+    "    age = input(\"Input your age: \")\n",
+    "    age = calculate_Age(int(age))\n",
+    "    print(\"Your age in dog years is: \", age)\n",
+    "    anwser = input(\"Would you like to calculate a different age? (Y/N): \")\n",
+    "    if anwser.lower() == \"y\":\n",
+    "        Init()\n",
+    "\n",
+    "    elif anwser.lower() == \"n\":\n",
+    "\n",
+    "        print(\"Closing program.....\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "Init() # Runs the program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "43475265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4°C is 39.2°F\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Caleb Thomas\n",
+    "01/29/25\n",
+    "Desciption: a program that converts a temperature in Celsius to Fahrenheit.\n",
+    "\n",
+    "startCommand: py TempConverter.py\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "## formuala = °F = °C × (9/5) + 32\n",
+    "C = 4 # Enter the celsius temperature here\n",
+    "\n",
+    "## Uses formuala to calculate the farinhates \n",
+    "F = C * (9/5) + 32\n",
+    "\n",
+    "#Print the output into a readable format\n",
+    "print(\"%d\\u00b0C is %s\\u00b0F\" %(C,float(F)))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54c148ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Caleb Thomas\n",
+    "01/29/25\n",
+    "Desciption: a program that takes in a sentance and returns the number of words in the sentance.\n",
+    "\n",
+    "startCommand: py WordCounter.py\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "def Init():\n",
+    "\n",
+    "    sentance = input(\"Input sentance: \")\n",
+    "    \n",
+    "    \n",
+    "    print(\"The number of words in your sentance is: \", sentance.count(' '))\n",
+    "    anwser = input(\"Would you like to try a different sentance? (Y/N): \")\n",
+    "    if anwser.lower() == \"y\":\n",
+    "        Init()\n",
+    "\n",
+    "    elif anwser.lower() == \"n\":\n",
+    "\n",
+    "        print(\"Closing program.....\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "Init() # Runs the program"
    ]
   },
   {
@@ -112,6 +230,54 @@
     "\n",
     "I really only had a few questions that i needed to ask\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d887773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## DogYearCalculator.py \n",
+    "\"\"\"\n",
+    "Caleb Thomas\n",
+    "01/29/25\n",
+    "Desciption: a program that takes users age and outputs it in dog years\n",
+    "\n",
+    "startCommand: py DogYearCalculator.py\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "def calculate_Age(age):\n",
+    "    \"\"\"\n",
+    "    Calculates age in dog years \n",
+    "    @param(Number): age\n",
+    "    @returns: Number\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return age*7\n",
+    "\n",
+    "\n",
+    "def Init():\n",
+    "\n",
+    "    age = input(\"Input your age: \")\n",
+    "    age = calculate_Age(int(age))\n",
+    "    print(\"Your age in dog years is: \", age)\n",
+    "    anwser = input(\"Would you like to calculate a different age? (Y/N): \")\n",
+    "    if anwser.lower() == \"y\":\n",
+    "        Init()\n",
+    "\n",
+    "    elif anwser.lower() == \"n\":\n",
+    "\n",
+    "        print(\"Closing program.....\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "Init() # Runs the program"
    ]
   },
   {
@@ -451,7 +617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
