Add questions section and remove Dog Year Calculator code from Class002 notebook

--- a/002/Class002_CalebThomas.ipynb
+++ b/002/Class002_CalebThomas.ipynb
@@ -209,6 +209,9 @@
    "id": "9bce043f",
    "metadata": {},
    "source": [
+    "# Questions\n",
+    "---\n",
+    "\n",
     "- 1. How does promises like asyncawait(asyncio) work in python?\n",
     "- 2. How can i make a request to a website and get the response in python?\n",
     "- 3. How does the .sort() method work in python?\n",
@@ -230,54 +233,6 @@
     "\n",
     "I really only had a few questions that i needed to ask\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d887773",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## DogYearCalculator.py \n",
-    "\"\"\"\n",
-    "Caleb Thomas\n",
-    "01/29/25\n",
-    "Desciption: a program that takes users age and outputs it in dog years\n",
-    "\n",
-    "startCommand: py DogYearCalculator.py\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "def calculate_Age(age):\n",
-    "    \"\"\"\n",
-    "    Calculates age in dog years \n",
-    "    @param(Number): age\n",
-    "    @returns: Number\n",
-    "\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return age*7\n",
-    "\n",
-    "\n",
-    "def Init():\n",
-    "\n",
-    "    age = input(\"Input your age: \")\n",
-    "    age = calculate_Age(int(age))\n",
-    "    print(\"Your age in dog years is: \", age)\n",
-    "    anwser = input(\"Would you like to calculate a different age? (Y/N): \")\n",
-    "    if anwser.lower() == \"y\":\n",
-    "        Init()\n",
-    "\n",
-    "    elif anwser.lower() == \"n\":\n",
-    "\n",
-    "        print(\"Closing program.....\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "Init() # Runs the program"
    ]
   },
   {
