add yt vid to assigment 4

--- a/004/Assignment_004_CalebThomas.ipynb
+++ b/004/Assignment_004_CalebThomas.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "1efb0461",
    "metadata": {},
    "outputs": [],
@@ -227,10 +227,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b892e17e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Dog Database Program\n",
+      "This program will help you to store and retrieve information about dog breeds\n",
+      "Let's get started\n",
+      "\n",
+      "\n",
+      "\n",
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  1\n",
+      "Enter the breed of the dog:  Beagel\n",
+      "Enter the height of the dog:  1\n",
+      "Enter the weight of the dog:  15\n",
+      "Enter the life span of the dog:  15\n",
+      "Enter the temperament of the dog (Friendly, Neutral, Aggressive):  silly\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperament should be either Friendly, Neutral or Aggressive\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the temperament of the dog (Friendly, Neutral, Aggressive):  Friendly\n",
+      "Is the dog a working dog (True/False):  true\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IsWorkDog should be either True or False\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Is the dog a working dog (True/False):  True\n",
+      "Enter the origin of the dog (e.g: Manchester New Hampshire):   Manchester New Hampshire\n",
+      "Enter the group of the dog (e.g: Sporting, Hound, Working, Terrier, Toy, Non-Sporting, Herding or Miscellaneous ):  Miscellaneous\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog breed added successfully\n",
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Breed:Beagel\n",
+      "Height:1.0\n",
+      "Weight:15.0\n",
+      "Life Span:15\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:True\n",
+      "Origin: Manchester New Hampshire\n",
+      "Group:Miscellaneous\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Press enter to return to the main menu \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Sample Data...\n",
+      "Labrador breed added successfully\n",
+      "Golden Retriever breed added successfully\n",
+      "German Shepherd breed added successfully\n",
+      "Bulldog breed added successfully\n",
+      "Poodle breed added successfully\n",
+      "Sample data loaded successfully\n",
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Breed:Beagel\n",
+      "Height:1.0\n",
+      "Weight:15.0\n",
+      "Life Span:15\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:True\n",
+      "Origin: Manchester New Hampshire\n",
+      "Group:Miscellaneous\n",
+      "\n",
+      "\n",
+      "Breed:Labrador\n",
+      "Height:24\n",
+      "Weight:30\n",
+      "Life Span:12\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:False\n",
+      "Origin:Canada\n",
+      "Group:Sporting\n",
+      "\n",
+      "\n",
+      "Breed:Golden Retriever\n",
+      "Height:24\n",
+      "Weight:35\n",
+      "Life Span:12\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:False\n",
+      "Origin:United Kingdom\n",
+      "Group:Sporting\n",
+      "\n",
+      "\n",
+      "Breed:German Shepherd\n",
+      "Height:24\n",
+      "Weight:40\n",
+      "Life Span:13\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:True\n",
+      "Origin:Germany\n",
+      "Group:Herding\n",
+      "\n",
+      "\n",
+      "Breed:German Shepherd\n",
+      "Height:29\n",
+      "Weight:40\n",
+      "Life Span:13\n",
+      "Temperament:Agressive\n",
+      "Is a workign dog:True\n",
+      "Origin:Germany\n",
+      "Group:Herding\n",
+      "\n",
+      "\n",
+      "Breed:Bulldog\n",
+      "Height:14\n",
+      "Weight:50\n",
+      "Life Span:8\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:False\n",
+      "Origin:United Kingdom\n",
+      "Group:Non-Sporting\n",
+      "\n",
+      "\n",
+      "Breed:Poodle\n",
+      "Height:15\n",
+      "Weight:70\n",
+      "Life Span:15\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:False\n",
+      "Origin:Germany\n",
+      "Group:Non-Sporting\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Press enter to return to the main menu \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  3\n",
+      "Enter the breed of the dog you want to search for:  poodle\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Breed:Poodle\n",
+      "Height:15\n",
+      "Weight:70\n",
+      "Life Span:15\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:False\n",
+      "Origin:Germany\n",
+      "Group:Non-Sporting\n",
+      "\n",
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  3\n",
+      "Enter the breed of the dog you want to search for:  german\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Breed:German Shepherd\n",
+      "Height:24\n",
+      "Weight:40\n",
+      "Life Span:13\n",
+      "Temperament:Friendly\n",
+      "Is a workign dog:True\n",
+      "Origin:Germany\n",
+      "Group:Herding\n",
+      "\n",
+      "Breed:German Shepherd\n",
+      "Height:29\n",
+      "Weight:40\n",
+      "Life Span:13\n",
+      "Temperament:Agressive\n",
+      "Is a workign dog:True\n",
+      "Origin:Germany\n",
+      "Group:Herding\n",
+      "\n",
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  3\n",
+      "Enter the breed of the dog you want to search for:  pug\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog breed not found\n",
+      "Loading Main Menu...\n",
+      "\n",
+      "\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add a dog breed\n",
+      "2. Display all dog breeds\n",
+      "3. Search for a dog breed\n",
+      "4. Load Sample Data\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you for using the program\n",
+      "Goodbye\n"
+     ]
+    }
+   ],
    "source": [
     "#SECTION - 2 : dog database program\n",
     "\n",
@@ -379,6 +759,14 @@
     "        </td>\n",
     "    </tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f2317cc-fcd4-4dc5-b771-73a65713d0f9",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=rXUl1fKfGpc"
    ]
   },
   {
@@ -609,7 +997,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -623,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
