Add Logger module and initial implementation of parking system
- Created Logger module for logging messages with different severity levels.
- Added initial implementation of a test script to demonstrate logging functionality.
- Developed documentation for Logger, Car, and Floor modules.
- Established a basic structure for the parking garage system with classes for Car and Floor.
- Created a TODO list outlining future enhancements and features for the parking system.
- Implemented logging of actions taken in the parking garage.

--- a/007/Assignment_007.ipynb
+++ b/007/Assignment_007.ipynb
@@ -61,7 +61,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "45ea588e-bb78-4b30-bdc2-2d9e407fe34f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
