fixed error with filebuilder

--- a/final project/src/BuildmeFirst.ipynb
+++ b/final project/src/BuildmeFirst.ipynb
@@ -145,8 +145,8 @@
     "    '''\n",
     "\n",
     "\n",
-    "buildModule(\"test.py\", code)\n",
-    "Module test.py created successfully.\n",
+    "buildModule(\"car.py\", code)\n",
+    "\n",
     "# make garage module\n",
     "\n",
     "code = '''\n",
@@ -238,7 +238,7 @@
     "'''\n",
     "\n",
     "buildModule(\"garage.py\", code)\n",
-    "Module garage.py created successfully.\n",
+    "\n",
     "# build the logger module\n",
     "\n",
     "code = '''#logger.py\n",
